tests/baselines/reference/contextualTyping11.errors.txt
tests/cases/compiler/contextualTyping11.ts(1,42): error TS2322: Type 'foo' is not assignable to type '{ id: number; }'.
  Index signature is missing in type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping11.ts (1 errors) ====
    class foo { public bar:{id:number;}[] = [<foo>({})]; }
                                             ~~~~~~~~~
!!! error TS2322: Type 'foo' is not assignable to type '{ id: number; }'.
!!! error TS2322:   Index signature is missing in type '{ id: number; }'.